--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.11 FATAL_ERROR)
 
-project(spp_firmware_updater)
+project(spp-firmware-updater)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
@@ -9,11 +9,11 @@ set(CMAKE_AUTORCC ON)
 find_package(Qt5Core REQUIRED)
 find_package(Qt5SerialPort REQUIRED)
 
-set(SRCS main.cpp updater.cpp)
-set(INSTALLDIR bin)
-add_executable(spp-firmware-updater ${SRCS})
+set(SOURCES app/main.cpp app/updater.cpp)
+add_executable(${PROJECT_NAME} ${SOURCES})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
-target_link_libraries(spp-firmware-updater Qt5::Core Qt5::SerialPort)
+target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::SerialPort)
 
-install(TARGETS spp-firmware-updater DESTINATION ${INSTALLDIR})
+set(INSTALL_DIR bin)
+install(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_DIR})
