flash: switch to BluetoothSocket

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,13 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
 find_package(Qt5Core REQUIRED)
-find_package(Qt5SerialPort REQUIRED)
+find_package(Qt5Bluetooth REQUIRED)
 
 set(SOURCES src/main.cpp src/updater.cpp)
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
-target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::SerialPort)
+target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Bluetooth)
 
 set(INSTALL_DIR bin)
 install(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_DIR})
